[gd_scene load_steps=6 format=2]

[ext_resource path="res://common/ghost/ghost.gd" type="Script" id=1]
[ext_resource path="res://common/ghost/ghost_animated.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleShape" id=1]
radius = 0.640456
height = 1.90692

[sub_resource type="SphereShape" id=2]
radius = 0.424526

[sub_resource type="CapsuleShape" id=3]
radius = 0.626886
height = 1.93405

[node name="ghost" type="KinematicBody"]
script = ExtResource( 1 )

[node name="GhostMesh" parent="." instance=ExtResource( 2 )]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="StairsLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00525638, -0.18003, 0.01477 )
visible = false
light_color = Color( 0.278268, 0.551039, 0.976562, 1 )
light_energy = 3.01
omni_range = 0.966587

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.49295, 0 )
shape = SubResource( 1 )

[node name="Power_area" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.851104, 0.799737 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Power_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.228894, -0.20627 )
shape = SubResource( 2 )

[node name="Stairs_test_area" type="Area" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 1.1616, 0 )
collision_layer = 4
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Stairs_test_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0165813, 0.340266 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

